--- a/docker-compose.monitor.yml
+++ b/docker-compose.monitor.yml
@@ -1,20 +1,7 @@
 services:
-  # --- MongoDB Exporter ---
-  mongodb_exporter:
-    image: percona/mongodb_exporter:0.40.0
-    container_name: mongodb_exporter
-    env_file:
-      - .env
-    environment:
-      MONGODB_URI: ${MONGO_URL}
-    restart: unless-stopped
-    networks:
-      - QRNetwork
-
   # --- cAdvisor: monitor all Docker containers ---
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
-    container_name: cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -27,9 +14,11 @@ services:
   # --- Prometheus ---
   prometheus:
     image: prom/prometheus
-    container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./grafana/provisioning/dashboards:/etc/grafana/dashboards
+      - ./grafana/provisioning/dashboards/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yml
+      - ./grafana/provisioning/datasources/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
     restart: unless-stopped
     networks:
       - QRNetwork
@@ -37,7 +26,6 @@ services:
   # --- Grafana ---
   grafana:
     image: grafana/grafana
-    container_name: grafana
     ports:
       - "13000:3000"
     volumes:
