--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,8 @@ steps:
         include:
           - app/**
           - Dockerfile
-          - compose.yml
+          - docker-compose.backend.yml
+          - docker-compose.monitor.yml
           - .drone.yml
     settings:
       username: 
