--- a/.drone.yml
+++ b/.drone.yml
@@ -48,3 +48,36 @@ steps:
         - docker compose -f docker-compose.backend.yml -p qrapp-backend up --force-recreate -d
         - docker compose -f docker-compose.monitor.yml -p qrapp-monitor up -d --force-recreate
         - docker system prune --force
+
+        
+###########################
+#      Manual Deploy      #
+###########################
+kind: pipeline
+type: docker
+name: Promote to Production
+
+trigger:
+  event:
+    - promote
+  target:
+    - production
+
+steps:
+  - name: Deploy Production
+    image: ghcr.io/appleboy/drone-ssh
+    settings:
+      host:
+        from_secret: PROD_SSH_HOST
+      username:
+        from_secret: PROD_SSH_USERNAME
+      password:
+        from_secret: PROD_SSH_PASSWORD
+      port: 22
+      command_timeout: 10000s
+      script:
+        - cd ~/apps/QRAppBackend
+        - git clone https://github.com/QRBusiness/QRApp-BackEnd.git . || true
+        - git pull origin main || true
+        - docker network create QRNetwork || true
+        - docker compose -f docker-compose.backend.yml -p qrapp-backend-prod up -d --force-recreate
