--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
     "redis>=6.2.0",
+    "sentry-sdk[fastapi]>=2.33.0",
 ]
 
 [dependency-groups]
