Nginx: Catch 413 Request Entity Too Large

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,16 @@
 server {
     listen 80;
-
     server_name api.qrapp;
+
+    client_max_body_size 2M;
+
+    error_page 413 = /400.json;
+
+    location = /400.json {
+        internal;
+        default_type application/json;
+        return 400 '{"message":"BAD_REQUEST","error": "Bad Request - File size exceeds 2MB limit"}';
+    }
 
     location / {
         proxy_pass         http://qrapp-backend:8000;
