--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "httpx>=0.28.1",
     "loguru>=0.7.3",
     "minio>=7.2.15",
+    "motor>=3.7.1",
     "pillow>=11.2.1",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
