--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -5,6 +5,9 @@ services:
     pull_policy: always
     environment:
       TZ: Asia/Hong_Kong
+    # command: ["/app/.venv/bin/uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload"]
+    # volumes:
+    #   - ./app:/app/app
     env_file:
       - .env
     networks:
@@ -16,7 +19,7 @@ services:
     ports:
       - 8000:80
     volumes:
-    - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - qrapp-backend
     networks:
