--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=4.3.0",
-    "beanie>=1.30.0",
+    "beanie==2.0.0",
     "fastapi[standard]>=0.115.12",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
@@ -14,6 +14,7 @@ dependencies = [
     "minio>=7.2.15",
     "motor>=3.7.1",
     "pillow>=11.2.1",
+    "pip>=25.1.1",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
     "redis>=6.2.0",
