--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=4.3.0",
     "beanie==2.0.0",
+    "fastapi-mail>=1.5.0",
     "fastapi[standard]>=0.115.12",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
