--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,14 @@ server {
         return 400 '{"message":"BAD_REQUEST","error": "Bad Request - File size exceeds 2MB limit"}';
     }
 
+    error_page 502 504 = /fallback.json;
+
+    location = /fallback.json {
+        internal;
+        default_type application/json;
+        return 503 '{"error":"SERVER_ERROR","message":"Hệ thống đang bận, vui lòng thử lại sau."}';
+    }
+
     location / {
         proxy_pass         http://qrapp-backend:8000;
         proxy_http_version 1.1;
